--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,6 @@ edition = "2021"
 [dependencies]
 dotenv = "0.15.0"
 reqwest = {version ="0.12.4", features =["json"]}
-serde = "1.0.202"
+serde = {version ="1.0.202", features = ["derive"]}
 serde_json = "1.0.117"
 tokio = {version ="1.37.0", features =["full"]}
